fixed select2 options not showing up due to overflow. removed useless select2 stuff that caused warnings to appear.

--- a/popup/timezonify-config.css
+++ b/popup/timezonify-config.css
@@ -11,14 +11,24 @@ body {
   padding: 0 20px;
   font-size: 12px;
   overflow-x: hidden;
-  overflow-y:hidden;
+  overflow-y:clip;
 }
 
 #main-content{
-  min-width: 300px;
+  min-width: 250px;
+  width: 100%;
+  height: 400px;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
-
+.height-trick{
+  height: 0px;
+}
 
 .flex-center{
   display: flex;
@@ -74,7 +84,7 @@ button:hover{
 }
 
 .logo{
-    max-width: 64px;
+    max-width: 96px;
 }
 
 .show {
@@ -107,7 +117,8 @@ button:hover{
 .timezone-container{
   display: flex;
   flex-direction: column;
-  padding: 0 12px
+  padding: 0 12px;
+  width: 100%;
 }
 
 .horizontal-input-group {
@@ -122,6 +133,9 @@ button:hover{
 .timezone-group{
   display:flex;
   flex-direction: column;
+  /* position:relative;
+  top: 0px;
+  left: 0px; */
   /* margin-bottom: 8px; */
 }
 
@@ -288,6 +302,8 @@ button:hover{
 .ui-menu-item{
   font-size: 12px;
 }
+
+
 
 
 .icon-divider-container {
